<resources>
    <string name="app_name">KotlinAndroid</string>
    <string name="add">Add</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="resultText">Result is:</string>
</resources>